# solo-composer-engine

./: Cargo.toml  LICENSE_MIT  watch.sh
src/: lib.rs
src/entries/: barline.rs  mod.rs  time_signature.rs
src/render/: mod.rs  text.rs
src/state/: app.rs  meta.rs  mod.rs  theme.rs
src/state/app/: mod.rs
src/state/entries/: absolute_tempo.rs  barline.rs  clef.rs  mod.rs  time_signature.rs  tone.rs
src/state/playback/: mod.rs
src/state/score/: config.rs  engrave.rs  flow.rs  meta.rs  mod.rs  player.rs  stave.rs  track.rs
src/state/score/instrument/: defs.rs  mod.rs  utils.rs
src/state/ui/: mod.rs  play.rs  setup.rs
src/utils/: duration.rs  generic.rs  measurements.rs  mod.rs  pitch.rs  storage.rs  text.rs  velocity.rs
