[package]
name = "solo-composer-parser"
version = "0.1.0"
authors = ["Aled Jones <aledjones.viola@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.40"
serde = "1.0.59"
serde_derive = "1.0.59"
serde_repr = "0.1"
wasm-typescript-definition = "0.1.0"
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.wasm-bindgen]
version = "0.2.63"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.40"
features = ["Window", "Storage"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
