[package]
name = "solo-composer-engine"
description = "Data layer for Solo Composer"
repository = "https://github.com/aledgjones/solo-composer-engine"
license = "GNU GPLv3"
version = "0.1.0"
authors = ["Aled Jones <aledjones.viola@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.40"
web-sys = {version = "0.3.40", features = ["Window", "Storage", "console"]}
serde = {version = "1.0.111", features = ["derive"]}
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"]}
console_error_panic_hook = { version = "0.1.6" }
serde_repr = "0.1.5"
lazy_static = "1.4.0"
maplit = "1.0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
